mutter/gnome-shell segfaults at startup in clutter_keymap_evdev_get_keyboard_map(keymap = NULL)
Starting today, mutter is segfaulting immediately:
Program terminated with signal SIGSEGV, Segmentation fault.
#0 0x00007f65710e6930 in clutter_keymap_evdev_get_keyboard_map (keymap=0x0)
at ../clutter/clutter/evdev/clutter-keymap-evdev.c:127
127 return keymap->keymap;
[Current thread is 1 (Thread 0x7f656c393a80 (LWP 8270))]
(gdb) bt
#0 0x00007f65710e6930 in clutter_keymap_evdev_get_keyboard_map (keymap=0x0)
at ../clutter/clutter/evdev/clutter-keymap-evdev.c:127
#1 0x00007f65710e6e17 in clutter_seat_evdev_new
(manager_evdev=0x5568e0c4dd80 [ClutterDeviceManagerEvdev])
at ../clutter/clutter/evdev/clutter-seat-evdev.c:189
#2 0x00007f65710e1a9c in clutter_device_manager_evdev_constructed
(gobject=0x5568e0c4dd80 [ClutterDeviceManagerEvdev])
at ../clutter/clutter/evdev/clutter-device-manager-evdev.c:1963
#3 0x00007f65716125cb in g_object_new_internal
(class=class@entry=0x5568e0c73340, params=params@entry=0x7ffd71902c30, n_params=n_params@entry=1) at ../../../../gobject/gobject.c:1845
#4 0x00007f6571614224 in g_object_new_valist
(object_type=<optimised out>, first_property_name=<optimised out>, var_args=var_args@entry=0x7ffd71902d80) at ../../../../gobject/gobject.c:2128
#5 0x00007f6571614559 in g_object_new
(object_type=<optimised out>, first_property_name=<optimised out>)
at ../../../../gobject/gobject.c:1648
#6 0x00007f65710e1f8b in _clutter_events_evdev_init
(backend=0x5568e0a5aa80 [MetaClutterBackendNative])
at ../clutter/clutter/evdev/clutter-device-manager-evdev.c:2139
#7 0x00007f657100fb61 in clutter_backend_real_init_events
(backend=0x5568e0a5aa80 [MetaClutterBackendNative])
at ../clutter/clutter/clutter-backend.c:555
#8 0x00007f65710105cf in _clutter_backend_init_events
(backend=0x5568e0a5aa80 [MetaClutterBackendNative])
at ../clutter/clutter/clutter-backend.c:829
#9 0x00007f657104dfb5 in clutter_init_real (error=0x7ffd71903068)
at ../clutter/clutter/clutter-main.c:1371
#10 0x00007f657104e388 in post_parse_hook
(context=0x5568e0c1cc60, group=0x5568e0c1ccc0, data=0x0, error=0x7ffd71903068) at ../clutter/clutter/clutter-main.c:1523
Edited by Jonas Ådahl